hello-world2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world2
  namespace: app-2
  labels:
    app: hello-world2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    
  selector:
    app: hello-world2
